automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 
   <body>
     <header>
+      <nav>
+        <ul>
+          <li><a href="flatironschool.com">New Questions</a></li>
+          <li><a href="flatironschool.com">About</a></li>
+      </ul>
+      <h3><a href="flatironschool.com">Icebreakers</a></h3>
+      </nav>
             
 
     </header>
