automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
           <li><a href="flatironschool.com">New Questions</a></li>
           <li><a href="flatironschool.com">About</a></li>
       </ul>
-      <h3><a href="flatironschool.com">Icebreakers</a></h3>
+      <h3>Icebreakers</h3>
       </nav>
 
 
