--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <li><a href="flatironschool.com">About</a></li>
         </ul>
       </nav>
-      <h3>Icebreakers</h3>
+      <h3><a href="flatironschool.com">Icebreakers</a></h3>
 
 
     </header>
